# edwh-pipcompile-plugin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
src/edwh_pipcompile_plugin/: __about__.py  __init__.py  pipcompile_plugin.py
tests/: test_discovery.py
tests/pytest_environment/: pyproject.toml
